--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^1.8.0",
     "lint-staged": "^6.1.0",
     "rambler-ui-playground": "^0.3.1",
