--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rm -rf build",
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/__doc__,**/__test__",
     "postbuild": "cp package.json .npmignore README.md build",
-    "dev": "NODE_ENV=development playground server",
+    "dev": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
     "pages": "NODE_ENV=production playground pages --publish",
     "eslint": "eslint '**/*.js'",
     "size": "size-limit",
@@ -26,9 +26,6 @@
     "url": "https://github.com/rambler-digital-solutions/rambler-ui/issues"
   },
   "homepage": "https://rambler-digital-solutions.github.io/rambler-ui",
-  "ghPagesRepository": {
-    "url": "git+https://github.com/rambler-digital-solutions/rambler-ui.git"
-  },
   "dependencies": {
     "classnames": "^2.2.5",
     "deepmerge": "^2.1.0",
@@ -42,7 +39,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
-    "babel-loader": "^6.2.5",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -61,6 +58,9 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
+    "get-md-title": "^1.0.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.11.4",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.7",
@@ -72,12 +72,17 @@
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^1.8.0",
     "lint-staged": "^6.1.0",
-    "rambler-ui-playground": "^0.3.1",
+    "minimist": "^1.2.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "size-limit": "^0.16.1",
-    "webpack": "^1.13.2"
+    "to-sentence-case": "^1.0.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
