--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-jss": "^8.3.5"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^0.9.0",
+    "@mdx-js/mdx": "^0.9.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
@@ -50,14 +52,18 @@
     "babel-polyfill": "^6.9.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.5.0",
+    "babel-standalone": "^6.26.0",
     "color": "^1.0.3",
+    "css-loader": "^0.28.11",
     "debug": "^2.2.0",
+    "doctrine": "^2.1.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.7.2",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
+    "get-md-desc": "^1.0.2",
     "get-md-title": "^1.0.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -70,18 +76,23 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^3.0.0",
     "lint-staged": "^6.1.0",
     "minimist": "^1.2.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
+    "react-codemirror": "^1.0.0",
+    "react-docgen": "^2.20.1",
     "react-dom": "^16.2.0",
+    "react-highlight.js": "^1.0.7",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
+    "recast": "^0.14.7",
+    "remark-highlight.js": "^5.0.0",
     "size-limit": "^0.16.1",
-    "to-sentence-case": "^1.0.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   },
   "peerDependencies": {
