--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
     "dev": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
-    "site": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js",
-    "pages": "NODE_ENV=production playground pages --publish",
+    "pages": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
     "eslint": "eslint '**/*.js'",
     "size": "size-limit",
     "precommit": "lint-staged",
@@ -66,6 +65,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
     "get-md-title": "^1.0.4",
+    "gh-pages": "^1.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.11.4",
