--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ test:
       - node_modules/
     policy: push
   tags:
-    - docker
+    - builder
   except:
     - /^gh-pages$/
   script:
@@ -29,13 +29,12 @@ build_package:
     <<: *cache
     policy: pull
   tags:
-    - docker
+    - builder
   except:
     - /^gh-pages$/
   only:
     - tags
   script:
-    - npm install
     - npm run build
     - cd build
     - echo "//registry.npmjs.org/:_authToken=$UI_BOT_NPM_AUTH_TOKEN" > ~/.npmrc
@@ -50,7 +49,7 @@ build_site:
     <<: *cache
     policy: pull
   tags:
-    - docker
+    - deployer
   except:
     - /^gh-pages$/
     - tags
@@ -60,7 +59,6 @@ build_site:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
-    - npm install
     - npm run pages -- --versions "${CI_COMMIT_REF_NAME}" --include ".gitignore"
 
 build_version_site:
@@ -69,7 +67,7 @@ build_version_site:
     <<: *cache
     policy: pull
   tags:
-    - docker
+    - deployer
   except:
     - /^gh-pages$/
   only:
@@ -78,13 +76,12 @@ build_version_site:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
-    - npm install
     - npm run pages -- --versions "${CI_COMMIT_TAG}" --include ".gitignore"
 
 mirror:
   stage: mirror
   tags:
-    - docker
+    - builder
   only:
     - tags
     - master
@@ -100,7 +97,7 @@ mirror:
 pages:
   stage: setup
   tags:
-    - docker
+    - deployer
   only:
     - /^gh-pages$/
   script:
