--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
+    "file-loader": "^2.0.0",
     "get-md-title": "^1.0.4",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.5.5",
