--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS_custom",
-    "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --single-run --browsers Chrome",
+    "test": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --browsers Phantom",
+    "test:chrome": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --browsers Chrome",
+    "test:watch": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start --browsers Phantom --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
