--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "deepmerge": "^2.1.0",
-    "jss": "^9.8.1",
-    "jss-preset-default": "^4.3.0",
+    "eventemitter3": "^3.1.0",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "react-jss": "^8.3.5"
+    "react-jss": "^8.6.1"
   },
   "devDependencies": {
     "@mdx-js/loader": "^0.9.0",
