--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ build_site:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
-    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}" --include ".gitignore"
+    - npm run pages -- --versions "${CI_COMMIT_REF_NAME}"
 
 build_version_site:
   stage: build
@@ -90,7 +90,7 @@ build_version_site:
     - ./ci-git-push-prepare.sh gitlab.rambler.ru "${SSH_PRIVATE_KEY}"
     - git config --global user.email "${GITLAB_USER_EMAIL}"
     - git config --global user.name "${GITLAB_USER_NAME}"
-    - npm run pages -- --versions "${CI_COMMIT_TAG}" --include ".gitignore"
+    - npm run pages -- --versions "${CI_COMMIT_TAG}"
 
 mirror:
   stage: mirror
