--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "devDependencies": {
     "@mdx-js/loader": "^0.15.4",
     "@mdx-js/mdx": "^0.15.4",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
